# solana-bot-v4

./: .gitignore  Cargo.toml
analytics/: Cargo.toml
analytics/src/: main.rs
analytics/src/db_integration/: mod.rs
analytics/src/shredstream/: analyser.rs  forwarder.rs  heartbeat.rs  logger.rs  main.rs  mod.rs
bot/: 1.py  Cargo.toml  Dockerfile.base
bot/src/: lib.rs  main.rs
bot/src/financial_services/: buy_recommendation.rs  mod.rs  price_in_sol_finder.rs
bot/src/solana/: README.md  address_table_cache.rs  mod.rs  position_tracker.rs  transaction.rs
bot/src/solana/wallet/: cli.rs  manager.rs  mod.rs  types.rs
bot/workflows/: docker-image.yml
ledger/: Cargo.toml
shredstream-jito-protos/: Cargo.toml
shredstream-proxy/: Cargo.toml
shredstream-proxy/src/: analyser.rs  forwarder.rs  logger.rs  main.rs
shredstream/proxy/: Cargo.toml
solana-ledger/: Cargo.toml
solana-ledger/src/: shred.rs  shredder.rs
