[workspace]
members = [
    "ledger",
    "shredstream-jito-protos",
    "shredstream-proxy"
]

exclud = [
    "shredstream"
]

[workspace.dependencies]
solana-ledger = { path = "ledger", version = "=1.18.26" }
jito-protos = { path = "shredstream-jito-protos" }

[patch.crates-io.tokio]
git = "https://github.com/anza-xyz/solana-tokio.git"
rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21"
