[workspace]
members = [
    "shredstream-jito-protos",
    "solana-ledger",
    "shredstream-proxy", 
    "bot"
, "analytics"]
resolver = "2"

[workspace.package]
version = "0.3.1"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://jito-labs.gitbook.io/mev/searcher-services/shredstream for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

[workspace.dependencies]
arc-swap = "1.6"
bot = { path = "bot" }
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
hostname = "0.4.0"
itertools = "0.13.0"
jito-protos = { path = "jito_protos" }
log = "0.4"
prost = "0.12.6"
prost-types = "0.12.6"
protobuf-src = "2"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
signal-hook = "0.3"
solana-client = "1.18.26"
solana-metrics = "1.18.26"
solana-net-utils = "1.18.26"
solana-perf = "1.18.26"
solana-sdk = "1.18.26"
solana-streamer = "1.18.26"
solana-program = "1.18.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10"
solana-ledger = { path = "solana-ledger" }
spl-associated-token-account = "2.3.0"
sha2 = "0.10.8"
