[package]
name = "analytics"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.26.2", features = ["bundled"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
arc-swap = "1.6"
bot = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
hostname = "0.4.0"
itertools = "0.13.0"
jito-protos = { path = "../shredstream-jito-protos" }
log = "0.4"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
solana-client = "1.18.26"
solana-metrics = "1.18.26"
solana-net-utils = "1.18.26"
solana-ledger = { workspace = true }
solana-entry = "1.18.26"
solana-perf = "1.18.26"
solana-sdk = "1.18.26"
solana-streamer = "1.18.26"
thiserror = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10"
protobuf-src = "1"
chrono = "0.4.38"
bincode = "1.3.3"
sha2 = { workspace = true }
num_cpus = "1.16.0"
lazy_static = "1.5.0"
borsh = "1.5.3"
gethostname = "0.5.0"
url = "2.4"
