[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "bot"
path = "src/lib.rs"

[[bin]]
name = "process"
path = "bin/process.rs"

[[bin]]
name = "build_proto"
path = "bin/build_proto.rs"



[[bin]]
name = "listen_shred"
path = "bin/listen_shred.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"]}
tokio = { version = "1", features = ["full"] }  # For async support

prost = "0.11"
prost-derive = "0.11"

colored = "2.0"

prost-build = "0.11"
base58 = "0.2"
base64 = "0.21"
chrono = "0.4"
borsh = "1.5.1"
convert_case = "0.6"
anchor-lang = "0.30.1"
bincode = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.3"
log = "0.4.8"
simplelog = "0.12"
dotenv = "0.15"
rand = "0.8"
hex-literal = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.26", features = ["bundled"] }
clap = { version = "4.5.21", features = ["derive"]}
tonic = "0.12.3"
tonic-build = "0.12.3"
prost-types = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
sha2 = "0.10.8"
