[package]
name = "shredstream-proxy"
version = "0.2.1"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://jito-labs.gitbook.io/mev/searcher-services/shredstream for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"


[dependencies]
arc-swap = "1.6"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
hostname = "0.4.0"
itertools = "0.13.0"
jito-protos = { workspace = true }
log = "0.4"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
signal-hook = "0.3"
solana-client = "2.0.16"
solana-metrics = "2.0.16"
solana-net-utils = "2.0.16"
solana-ledger = "2.0.17"
solana-entry = "2.0.17"
solana-perf = "2.0.16"
solana-sdk = "2.0.16"
solana-streamer = "2.0.16"
thiserror = "1"
tokio = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10"
protobuf-src = "1"

[build-dependencies]
protobuf-src = "1"
