[package]
name = "shredstream-proxy"
version = "0.2.1"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://jito-labs.gitbook.io/mev/searcher-services/shredstream for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"


[dependencies]
arc-swap = "1.6"
bot = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
hostname = "0.4.0"
itertools = "0.13.0"
jito-protos = { path = "../shredstream-jito-protos" }
log = "0.4"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
signal-hook = "0.3"
solana-client = "1.18.26"
solana-metrics = "1.18.26"
solana-net-utils = "1.18.26"
solana-ledger = { workspace = true }
solana-entry = "1.18.26"
solana-perf = "1.18.26"
solana-sdk = "1.18.26"
solana-streamer = "1.18.26"
thiserror = "1"
tokio = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10"
protobuf-src = "1"
chrono = "0.4.38"
bincode = "1.3.3"
sha2 = { workspace = true }

[build-dependencies]
protobuf-src = "1"
