[package]
name = "solana-ledger"
description = "Solana ledger"
documentation = "https://docs.rs/solana-ledger"
edition = "2021"
version = "1.18.26"

[dependencies]
spl-token = "=4.0.0"
spl-token-2022 = "=1.0.0"
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.9.0"
thiserror = "1.0.56"
# Update solana-tokio patch below when updating this version
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
trees = "0.4.2"
lazy_static = "1.4.0"
libc = "0.2.152"
log = "0.4.20"
lru = "0.7.7"
mockall = "0.11.4"
num_cpus = "1.16.0"
num_enum = "0.7.2"
prost = "0.11.9"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.1"
reed-solomon-erasure = "6.0.0"
scopeguard = "1.2.0"
serde = "1.0.195"
serde_bytes = "0.11.14"
sha2 = "0.10.8"
assert_matches = "1.5.0"
bincode = "1.3.3"
bitflags = { version = "2.4.2", features = ["serde"] }
byteorder = "1.5.0"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cc = "1.0.83"
chrono = { version = "0.4.31", default-features = false }
chrono-humanize = "0.2.3"
crossbeam-channel = "0.5.11"
dashmap = "5.5.3"
fs_extra = "1.3.0"
futures = "0.3.30"
hyper-proxy = "0.9.1"
itertools = "0.10.5"
solana-account-decoder = "1.18.26"
solana-accounts-db = "1.18.26"
solana-bpf-loader-program = "1.18.26"
solana-cost-model = "1.18.26"
solana-entry = "1.18.26"
solana-frozen-abi = "1.18.26"
solana-frozen-abi-macro = "1.18.26"
solana-measure = "1.18.26"
solana-metrics = "1.18.26"
solana-perf = "1.18.26"
solana-program-runtime = "1.18.26"
solana-rayon-threadlimit = "1.18.26"
solana-runtime = "1.18.26"
solana-sdk = "1.18.26"
solana-stake-program = "1.18.26"
solana-storage-bigtable = "1.18.26"
solana-storage-proto = "1.18.26"
solana-transaction-status = "1.18.26"
solana-vote = "1.18.26"
solana-vote-program = "1.18.26"


[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.21.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
bs58 = "0.4.0"
solana-account-decoder = "1.18.26"
solana-logger = "1.18.26"
solana-runtime = { version = "1.18.26", features = ["dev-context-only-utils"] }
spl-pod = "=0.1.0"
test-case = "3.3.1"

[features]
dev-context-only-utils = []

[lib]
crate-type = ["lib"]
name = "solana_ledger"

[[bench]]
name = "sigverify_shreds"

[[bench]]
name = "blockstore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
